Fixed Cookbook Spacing

--- a/prototype/css/main.css
+++ b/prototype/css/main.css
@@ -82,7 +82,7 @@ select{
 
 #search_button{
     font-size: 300%;
-    width: 15%;
+    width: 20%;
     margin-left: 2.5%;
 }
 
@@ -152,7 +152,7 @@ button{
 }
 
 #form input[type="text"] {
-    width: 80%;
+    width: 75%;
     height: 135%;
     font-size: 300%;
 }
